# NekoUI

./: Cargo.toml
.github/actions/setup-rust/: action.yml
.github/workflows/: rust-checks.yml
crates/nekoui/: Cargo.toml
crates/nekoui/examples/: flexbox_gallery.rs  hello_world.rs  multi_window.rs  no_titlebar.rs  style_showcase.rs  text_gallery.rs
crates/nekoui/src/: app.rs  element.rs  error.rs  geometry.rs  input.rs  lib.rs  scene.rs  semantics.rs  style.rs  text_system.rs  window.rs
crates/nekoui/src/app/: context.rs  executor.rs  handle.rs  runtime.rs  tests.rs
crates/nekoui/src/element/: build.rs  builder_macros.rs  core.rs  div.rs  mod.rs  text.rs
crates/nekoui/src/platform/: mod.rs  runner.rs
crates/nekoui/src/platform/runtime/: app_loop.rs  input.rs  mod.rs  window_runtime.rs
crates/nekoui/src/platform/wgpu/: atlas.rs  context.rs  mod.rs  renderer.rs
crates/nekoui/src/platform/wgpu/renderer/: frame_package.rs  pipelines.rs  prepare.rs  submit.rs  surface_controller.rs  types.rs  upload.rs
crates/nekoui/src/platform/wgpu/shader/: mod.rs  quad.wgsl  rect.wgsl  text.wgsl
crates/nekoui/src/platform/wgpu/shader/lib/: clip.wgsl
crates/nekoui/src/platform/window/: attributes.rs  command.rs  handle.rs  mod.rs  model.rs
crates/nekoui/src/platform/window/native/: macos.rs  mod.rs  windows.rs
crates/nekoui/src/platform/window/native/linux/: mod.rs  wayland.rs  x11.rs
crates/nekoui/src/scene/: mod.rs  primitive.rs  retained.rs  retained_compile.rs  retained_diff.rs  retained_frame_areas.rs  retained_helpers.rs  retained_tree.rs
crates/nekoui/src/style/: color.rs  geometry.rs  layout.rs  paint.rs  runtime.rs  text.rs
crates/nekoui/src/text_system/: cache.rs  selector.rs  types.rs
