[package]
name = "nekoui"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "GPU-accelerated UI framework"
keywords = ["desktop", "gui"]
categories = ["gui"]
repository = "https://github.com/NeoNekos/NekoUI"
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
# accesskit = { workspace = true, optional = true }
# accesskit_winit = { workspace = true, optional = true }
bitflags.workspace = true
bytemuck.workspace = true
crossbeam-channel.workspace = true
cosmic-text.workspace = true
etagere.workspace = true
hashbrown.workspace = true
log.workspace = true
parking_lot.workspace = true
pollster.workspace = true
rustc-hash.workspace = true
slotmap.workspace = true
smallvec.workspace = true
swash.workspace = true
taffy.workspace = true
thiserror.workspace = true
wgpu.workspace = true
winit.workspace = true

# [features]
# a11y = ["dep:accesskit", "dep:accesskit_winit"]

[dev-dependencies]
env_logger = "0.11.10"
